--- a/.github/workflows/app-ci.yml
+++ b/.github/workflows/app-ci.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm run install-all
+      - run: npm run install
       - run: npm run build
       - run: npm run lint
       - run: npm run test
